--- a/src/css/common.css
+++ b/src/css/common.css
@@ -23,7 +23,16 @@ body {
 #list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+
   gap: 20px;
+}
+
+#item {
+  width: 250px;
+  height: 450px;
+
+  overflow: hidden;
 }
 
 #load-more__btn {
